books/projects/rac/tests/yaml_test/control_flow/switch-empty.ref.stderr
switch-empty.cpp:6 (2-3): syntax error, unexpected '}', expecting CASE or DEFAULT
 6 |   }
   |   ^
