books/projects/rac/tests/yaml_test/control_flow/switch-empty.cpp
// RAC begin

int foo(int x) {

  switch (x) {
  }

  return x;
}
